Additional bugfixing:
* Download data not respecting month selected (also added ordering of data for visibility ease)
* Fixed year filter display not respecting "courselevelyearfilter"
* Corrected issues with cutoff time calculations
* Updated activity dashboard for assign module not outputting submission status
* Updated CSS to change selected menu items to blue background on select instead of on losing focus

--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,11 @@ body #local-assessfreq-index {
 .modal-dialog.local-assessfreq-modal-large .modal-body .chartjs-render-monitor {
     min-height: calc(100vh - 250px);
 }
+
+#local-assessfreq-index .dropdown-menu .dropdown-item:active,
+#local-assessfreq-index .dropdown-menu .dropdown-item:focus,
+#local-assessfreq-index .dropdown-menu .dropdown-item:focus-within {
+    outline: 0 !important;
+    background-color: #0176be !important;
+    color: #fff !important;
+}
